--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- fonts -->
+  <link rel="stylesheet" href="https://zyae.net/assets/fonts/Roboto/stylesheet.css" />
+  <!-- flaticon -->
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css' />
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
+  <!-- zyae icons -->
+  <link rel='stylesheet' href='https://zyae.net/assets/fonts/zyae-icons/style.css'>
+
+  <meta name="viewport" content="initial-scale=1, viewport-fit=cover, width=device-width" />
+  <link rel="manifest" href="./manifest.webmanifest" />
+
   <title>Bluebird</title>
 </head>
 
