--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <!-- zyae icons -->
   <link rel='stylesheet' href='https://zyae.net/assets/fonts/zyae-icons/style.css'>
 
-  <meta name="viewport" content="initial-scale=1, viewport-fit=cover, width=device-width" />
+  <meta name="viewport"
+    content="initial-scale=1, maximum-scale=1.0, user-scalable=0, viewport-fit=cover, width=device-width" />
+  <meta name="theme-color" content="#ffffff" />
   <link rel="manifest" href="./manifest.webmanifest" />
 
   <title>Bluebird</title>
