--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- flaticon -->
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css' />
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
   <!-- zyae icons -->
   <link rel='stylesheet' href='https://zyae.net/assets/fonts/zyae-icons/style.css'>
 
